openshift/speech-srt-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: speech-srt
  labels:
    app: speech-srt
spec:
  ports:
  - port: 5001
    targetPort: 5001
    name: web
  selector:
    app: speech-srt
