openshift/speech-srt-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: speech-srt
  labels:
    app: speech-srt
spec:
  port:
    targetPort: web
  to:
    kind: Service
    name: speech-srt
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
